# megatron-gui

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/megatron_gui/: __init__.py  main.py  viewer.py  widgets.py
tests/: test_package.py
